Plantilla con contenido del trabajo

--- a/plantilla.zip/Taller memoria.tex
+++ b/plantilla.zip/Taller memoria.tex
@@ -13,15 +13,15 @@
         \vspace*{1cm}
             
         \Huge
-        \textbf{Título del trabajo}
+        \textbf{Taller memoria}
             
         \vspace{0.5cm}
         \LARGE
-        Subtítulo
+        
             
         \vspace{1.5cm}
             
-        \textbf{Nombres y Apellidos del autor}
+        \textbf{ Mateo Restrepo Mesa }
             
         \vfill
             
@@ -36,12 +36,15 @@
     \end{center}
 \end{titlepage}
 
-\tableofcontents
 
-\section{Sección introductoria}
-Esta es la primera sección, podemos agregar algunos elementos adicionales y todo será escrito correctamente. Más aún, si una palabra es demasiado larga y tiene que ser truncada, babel tratará de truncarla correctamente dependiendo del idioma.
 
-\section{Sección de contenido} \label{contenido}
+\section{Desarrollo del taller} \label{contenido}
+
+\subsection{Defina que es la memoria del computador.}
+La memoria del computador es la parte fundamental en donde se procesa la informacion que esté este ejecutando en ese momento
+\subsection{Mencione los tipos de memoria que conoce y haga una pequeña descripción de cada tipo.}
+\subsection{Describa la manera como se gestiona la memoria en un computador.}
+\subsection{¿Qué hace que una memoria sea más rápida que otra? ¿Por qué esto es importante?}
 
 Esta sección es para ver qué pasa con los comandos 
 que definen texto
