--- a/plantilla.zip/Taller memoria.tex
+++ b/plantilla.zip/Taller memoria.tex
@@ -17,7 +17,7 @@
             
         \vspace{0.5cm}
         \LARGE
-        
+        Informatica 2
             
         \vspace{1.5cm}
             
@@ -41,10 +41,32 @@
 \section{Desarrollo del taller} \label{contenido}
 
 \subsection{Defina que es la memoria del computador.}
-La memoria del computador es la parte fundamental en donde se procesa la informacion que esté este ejecutando en ese momento
+La memoria del computador es la parte fundamental en donde se procesa la informacion temporal tanto como la de los programas que se procesan o se van a procesar en un determinado momento o del sistema operativo.
+
+La memoria es el cerebro del computador ya que está es la que se encarga de transportar informacion tanto al disco duro como al procesador para que estos ejecuten los programas que se estan ordenando abrir.
+
 \subsection{Mencione los tipos de memoria que conoce y haga una pequeña descripción de cada tipo.}
+-Memoria RAM: La memoria ram es la que se encarga de guardar y mantener abierto o en segundo plano los datos de una aplicacion.
+-Memoria ROM: Es la que se encarga de almacenar los datos de todas las aplicaciones y del sistema operativo.
+-Memoria cache: Área de almacenamiento dedicada a los datos usados o solicitados con más frecuencia para su recuperación a gran velocidad
+-Memoria DRAM: La memoria dinamica pierde su carga progresivamente, necesitando de un circuito dinámico de refresco que, cada cierto período, revisa dicha carga y la repone en un ciclo de refresco.
+-Memoria SRAM: Basada en semiconductores, capaz de mantener los datos, mientras siga alimentada, sin necesidad de circuito de refresco.
+-Memoria Flash: Permite la lectura y escritura de múltiples posiciones de memoria en la misma operación.
+-Memoria Virtual: Es la memoria que se encarga de brindar tanto memoria para el usuario como para si misma, normalmente desde la unidad ROM
+-Memoria VRAM: Es la memoria de video la cual permite ejecutar juegos, programas de alto nivel que requieran de muchos requisitos, en si es una memoria fundamental para un computador ya que es la que permite la alta calidad de imagen.
 \subsection{Describa la manera como se gestiona la memoria en un computador.}
+1-Al iniciar el sistema operativo, los procesos de ejecucion del sistema se almacenan en el sistema
+2-Todos los programas se van a la memoria
+3-Se comienza un ciclo de abrir un programa y esté almacena sus datos en la memoria
+4-Cuando la memoria llena su capacidad de frecuencia, empieza a liberar datos o aplicaciones para disminuir espacio
+5-Vuelve a iniciar el ciclo de almacenamiento y  liberar las secciones de memoria que ya no se utilizan para que estén disponibles para otros programas. 
+6-Cuando se apaga el equipo, se borra toda la informacion de la memoria.
 \subsection{¿Qué hace que una memoria sea más rápida que otra? ¿Por qué esto es importante?}
+
+Esto depende de muchos factores.
+Lo que hace rapido una memoria de otra es la frecuencia de lectura de datos, la velocidad determina la rapidez a la que es capaz de trabajar la memoria RAM y afecta, junto con el bus de datos, a su ancho de banda. Una mayor velocidad permite realizar transferencias en menos tiempo. Las operaciones de almacenar, borrar y realmacenar nueva información y datos se completarán más rápidamente, lo que en algunos casos puede marcar una diferencia importante de rendimiento. Tambien es muy importante la capacidad de la memoria debido a que si una aplicacion pide una alta capacidad de almacenamiento para sus datos y tenemos una memoria con poca capacidad, esté programa se ejecutara de manera incorrecta pero si tenemos una memoria de alta capacidad no tendremos problemas para ejecutar ese mismo programa.
+
+
 
 Esta sección es para ver qué pasa con los comandos 
 que definen texto
