Agrego introduccion y referencias bibliograficas, finalice el trabajo.

--- a/plantilla.zip/Taller memoria.tex
+++ b/plantilla.zip/Taller memoria.tex
@@ -35,6 +35,16 @@
             
     \end{center}
 \end{titlepage}
+\tableofcontents
+
+\section{Introducción}
+
+Actualmente las computadoras se han vuelto muy importantes en la vida 
+humana, es por ello que también se ha vuelto indispensable la realización o creación de 
+herramientas que a su vez sean mejoradas en un futuro o ya hayan sido mejoradas, así mismo el día de hoy hablaremos sobre una de estas herramientas, 
+La memoria es un dispositivo esencial en un computador ya que retiene o almacena información. 
+También hablaremos sobre los tipos de memoria existentes, la diferencia de rapidez entre una memoria y otra y como se gestiona una memoria.
+Por otro lado nos encontramos con una memoria virtual la cual se podría decir que es un tipo de memoria especial ya que se encarga de ejecutar los procesos que requieren más memoria de la que dispone el sistema, ya que en la memoria principal se mantendrá solo aquella memoria que el proceso esté utilizando y el resto en disco. De tal manera que las limitaciones de memoria física ya no existiría. \newpage
 
 
 \section{Desarrollo del taller} \label{contenido}
@@ -58,10 +68,11 @@ La memoria es el cerebro del computador ya que está es la que se encarga de tra
 \begin{figure}[h]
 \includegraphics[width=6cm]{ssd.jpg}
 \centering
-\caption{memoria ROM}
+\caption{Memoria ROM}
 \end{figure}
 
 -Memoria cache: Área de almacenamiento dedicada a los datos usados o solicitados con más frecuencia para su recuperación a gran velocidad, normalmente se ejecuta en el procesador \newline
+
 \begin{figure}[h]
 \includegraphics[width=6cm]{Cache.jpg}
 \centering
@@ -121,10 +132,27 @@ Lo que hace rápido una memoria de otra es la frecuencia de lectura de datos, la
 
 \section{Conclusión} \label{conclulsion}
 
-Así mismo, sabiendo que tipo memorias existen y para que se utilizan, la memoria es el núcleo central de un computador, cabe decir que sin una memoria ningún equipo electrónico encendería ya que la memoria se encarga de distribuir información de un lugar a otro y también se encarga de almacenarla, por decirlo de una manera abstracta, la memoria es el cerebro del computador, eso quiere decir que es la que facilita que un computador realice diferentes operaciones simultáneamente.
+Así mismo, sabiendo que tipo memorias existen y para que se utilizan, podemos decir que la memoria es el núcleo central de un computador, cabe decir que sin una memoria ningún equipo electrónico encendería ya que la memoria se encarga de distribuir información de un lugar a otro y también se encarga de almacenarla, por decirlo de una manera abstracta, la memoria es el cerebro del computador, eso quiere decir que es la que facilita que un computador realice diferentes operaciones simultáneamente. \newline
+
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
+{
+Tutorialspoint,
+    author = "N.A",
+    title = "ordenador - memoria",
+    url  = "https://www.tutorialspoint.com/",
+    addendum = "(N.N)",
+    keywords = "Memoria" \newline
+}
+{
+\newline muycomputer,
+    author = "Isidro Ros",
+    title = "Memoria RAM: qué es, por qué es importante y recomendaciones",
+    url  = "https://www.muycomputer.com/2018/11/04/memoria-ram-que-es-recomendaciones/#:~:text=Una%20mayor%20velocidad%20permite%20realizar,una%20diferencia%20importante%20de%20rendimiento",
+    addendum = "(4 noviembre, 2018)",
+    keywords = "Memoria"
+}
 
 
 \end{document}
