Revert "Correción de algunos parrafos y finalizacion de la tarea."
This reverts commit 3e3765a35289a85e20c14541e92a9984ad02b121.

--- a/plantilla.zip/Taller memoria.tex
+++ b/plantilla.zip/Taller memoria.tex
@@ -50,12 +50,12 @@ Por otro lado nos encontramos con una memoria virtual la cual se podría decir q
 \section{Desarrollo del taller} \label{contenido}
 
 \subsection{Defina que es la memoria del computador.}
-La memoria del computador es la parte fundamental en donde se procesa la información temporal tanto cómo la de los programas que se procesan o se van a procesar en un determinado momento, la memoria se trata del dispositivo donde se almacena temporalmente toda la información con la que trabajan los microprocesadores para procesarla y devolver los resultados que los usuarios requieren..
+La memoria del computador es la parte fundamental en donde se procesa la información temporal tanto cómo la de los programas que se procesan o se van a procesar en un determinado momento o ejecuciones del sistema operativo.
 
-Se puede decir que la memoria es el cerebro del computador ya que esté es el que se encarga de transportar información y datos del disco duro al procesador, estos datos se ejecutan en el procesador y luego de que se termine o se cierre el proceso la memoria se encarga de devolver esa informacion al disco duro.
+La memoria es el cerebro del computador ya que está es la que se encarga de transportar información tanto al disco duro como al procesador para que estos ejecuten los programas que se están ordenando abrir.
 
 \subsection{Mencione los tipos de memoria que conoce y haga una pequeña descripción de cada tipo.}
--Memoria RAM: La memoria RAM es la que se encarga de guardar y mantener abierto o en segundo plano los datos de una aplicación temporalmente.\newline
+-Memoria RAM: La memoria RAM es la que se encarga de guardar y mantener abierto o en segundo plano los datos de una aplicación.\newline
 
 \begin{figure}[h]
 \includegraphics[width=6cm]{Memoria.jpg}
@@ -115,14 +115,12 @@ Se puede decir que la memoria es el cerebro del computador ya que esté es el qu
 \end{figure}
 
 \subsection{Describa la manera como se gestiona la memoria en un computador.}
-
-La gestión de la memoria principal de una computadora es una tarea de suma importancia para el funcionamiento de la misma.Existen varias formas de gestionar la memoria. Por lo común, la forma de gestión dependerá de la máquina virtual que se quiera proporcionar y del hardware subyacente, con independencia de la forma de gestión es necesario decidir qué estrategias se deben utilizar para obtener un rendimiento óptimo. Para poder gestionar la memoria adecuada y óptimamente el sistema operativo debe seguir las siguientes estrategias. \newline
-
-1-Al iniciar el sistema operativo, los procesos de ejecucion del sistema se almacenan en el sistema. \newline
-2-Todos los programas y procesos se gestionan en la memoria.\newline
-3-Cuando la memoria llena su capacidad de frecuencia, empieza a liberar datos o aplicaciones para disminuir espacio. \newline
-4-Se liberan secciones de memoria que ya no se utilizan para que estén disponibles para otros programas. \newline
-5-Cuando se apaga el equipo, se borra toda la informacion de la memoria guardada.\newline
+1-Al iniciar el sistema operativo, los procesos de ejecucion del sistema se almacenan en el sistema \newline
+2-Todos los programas se van a la memoria \newline
+3-Se comienza un ciclo de abrir un programa y esté almacena sus datos en la memoria\newline
+4-Cuando la memoria llena su capacidad de frecuencia, empieza a liberar datos o aplicaciones para disminuir espacio\newline
+5-Vuelve a iniciar el ciclo de almacenamiento y liberar las secciones de memoria que ya no se utilizan para que estén disponibles para otros programas. \newline
+6-Cuando se apaga el equipo, se borra toda la informacion de la memoria.\newline
 
 
 \subsection{¿Qué hace que una memoria sea más rápida que otra? ¿Por qué esto es importante?}
@@ -130,12 +128,11 @@ La gestión de la memoria principal de una computadora es una tarea de suma impo
 Esto depende de muchos factores. \newline
 
 Lo que hace rápido una memoria de otra es la frecuencia de lectura de datos, la velocidad determina la rapidez a la que es capaz de trabajar la memoria RAM y afecta, junto con el bus de datos, a su ancho de banda. Una mayor velocidad permite realizar transferencias en menos tiempo. Las operaciones de almacenar, borrar y Re almacenar nueva información y datos se completarán más rápidamente, lo que en algunos casos puede marcar una diferencia importante de rendimiento. También es muy importante la capacidad de la memoria debido a que, si una aplicación pide una alta capacidad de almacenamiento para sus datos y tenemos una memoria con poca capacidad, esté programa se ejecutara de manera incorrecta, pero si tenemos una memoria de alta capacidad no tendremos problemas para ejecutar ese mismo programa.
-la memoria tiene una velocidad de reloj, y la CPU puede acceder más rápido a una memoria de velocidad más alta que a una memoria de velocidad más baja.
 
 
 \section{Conclusión} \label{conclulsion}
 
-Así mismo, sabiendo que tipo memorias existen y para que se utilizan, podemos decir que la memoria es una de las partes fundamentales de un equipo electronico, cabe recalcar que sin una memoria ningún dispositivo encendería ya que la memoria se encarga de distribuir información de un lugar a otro y también se encarga de almacenarla, por decirlo de una manera abstracta, la memoria es el cerebro del computador, eso quiere decir que es la que facilita que un computador realice diferentes operaciones simultáneamente. \newline
+Así mismo, sabiendo que tipo memorias existen y para que se utilizan, podemos decir que la memoria es el núcleo central de un computador, cabe decir que sin una memoria ningún equipo electrónico encendería ya que la memoria se encarga de distribuir información de un lugar a otro y también se encarga de almacenarla, por decirlo de una manera abstracta, la memoria es el cerebro del computador, eso quiere decir que es la que facilita que un computador realice diferentes operaciones simultáneamente. \newline
 
 
 \bibliographystyle{IEEEtran}
