--- a/plantilla.zip/references.bib
+++ b/plantilla.zip/references.bib
@@ -1,39 +1,34 @@
-@article{einstein,
-    author = "Albert Einstein",
-    title = "{Zur Elektrodynamik bewegter K{\"o}rper}. ({German})
-    [{On} the electrodynamics of moving bodies]",
-    journal = "Annalen der Physik",
-    volume = "322",
-    number = "10",
-    pages = "891--921",
-    year = "1905",
-    DOI = "http://dx.doi.org/10.1002/andp.19053221004",
-    keywords = "physics"
+@webpage{memoria,
+    author = "N.A",
+    title = "ordenador - memoria",
+    url  = "https://www.tutorialspoint.com/es/computer_fundamentals/computer_memory.htm",
+    addendum = "(N.N)",
+    keywords = "Memoria" 
 }
-
-@book{dirac,
-    title = {The Principles of Quantum Mechanics},
-    author = {Paul Adrien Maurice Dirac},
-    isbn = {9780198520115},
-    series = {International series of monographs on physics},
-    year = {1981},
-    publisher = {Clarendon Press},
-    keywords = {physics}
+@article{mycomputer,
+    author = "Isidro Ros",
+    title = "Memoria RAM: qué es, por qué es importante y recomendaciones",
+    url  = "https://www.muycomputer.com/2018/11/04/memoria-ram-que-es-recomendaciones/#:~:text=Una%20mayor%20velocidad%20permite%20realizar,una%20diferencia%20importante%20de%20rendimiento",
+    addendum = "(4 noviembre, 2018)",
+    keywords = "Memoria" 
 }
-
-@online{knuthwebsite,
-    author = "Donald Knuth",
-    title = "Knuth: Computers and Typesetting",
-    url  = "http://www-cs-faculty.stanford.edu/~uno/abcde.html",
-    addendum = "(accessed: 01.09.2016)",
-    keywords = "latex,knuth"
+@article{funcionamiento,
+    title = {Como funciona la memoria de un computador},
+    author = {Augusto  Enrique  Salazar  Ramirez  Jimenez},
+    year = {2020},
+    publisher = {UdeA},
+    keywords = {Memoria del computador} 
 }
-
-@inbook{knuth-fa,
-    author = "Donald E. Knuth",
-    title = "Fundamental Algorithms",
-    publisher = "Addison-Wesley",
-    year = "1973",
-    chapter = "1.2",
-    keywords  = "knuth,programming"
+@webpage{cache,
+    author = "María Estela Raffino",
+    title = "Concepto de memoria cache",
+    url  = https://concepto.de/memoria-cache/#ixzz6XqvtfBXR,
+    addendum = "( 30 de junio de 2020)",
+    keywords = "Memoria"
 }
+@webpage{uso,
+    author = " Micron Technology",
+    title = "¿Qué es la memoria (DRAM)?",
+    url  = "https://www.crucial.es/support/what-is-computer-memory-dram",
+    addendum = "( N.A)",
+    keywords = "Dram"
